components/bamoe/services/management-console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: management-console
  name: management-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: management-console
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: management-console
        middleware: bamoe
    spec:
      containers:
        - env:
            - name: RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE
              value: PROD
            - name: RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  name: bamoe-services-endpoints
                  key: DATA_INDEX_URL
            - name: KOGITO_CONSOLES_KEYCLOAK_URL
              valueFrom:
                configMapKeyRef:
                  name: bamoe-services-endpoints
                  key: KEYCLOAK_URL
            - name: KOGITO_CONSOLES_KEYCLOAK_DISABLE_HEALTH_CHECK
              value: 'true'
            - name: KOGITO_CONSOLES_KEYCLOAK_REALM
              value: kogito
            - name: KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID
              value: kogito-mgmt-service
          image: quay.io/bamoe/management-console:9.1.0-ibm-0001
          name: bamoe-management-console
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
