components/bamoe/services/management-console/management-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: management-console
  name: management-console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: management-console
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: management-console
    spec:
      containers:
        - env:
            - name: RUNTIME_TOOLS_MANAGEMENT_CONSOLE_KOGITO_ENV_MODE
              value: PROD
            - name: RUNTIME_TOOLS_MANAGEMENT_CONSOLE_DATA_INDEX_ENDPOINT
              value: https://data-index.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud/graphql/
            - name: KOGITO_CONSOLES_KEYCLOAK_URL
              value: https://keycloak.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud/
            - name: KOGITO_CONSOLES_KEYCLOAK_DISABLE_HEALTH_CHECK
              value: 'true'
            - name: KOGITO_CONSOLES_KEYCLOAK_REALM
              value: kogito
            - name: KOGITO_CONSOLES_KEYCLOAK_CLIENT_ID
              value: kogito-mgmt-service
          image: quay.io/bamoe/management-console:9.1.0-ibm-0001
          name: bamoe-poc-management-console
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
