components/bamoe/services/management-console/management-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: management-console
  name: management-console
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: management-console
