components/bamoe/services/management-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: management-console
  name: management-console
  namespace: app-bamoe-services
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: management-console
