components/bamoe/services/management-console/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: management-console-ingress
  namespace: app-bamoe-services
  labels:
    app.kubernetes.io/component: management-console
    app.kubernetes.io/instance: management-console
    app.kubernetes.io/name: management-console
  annotations:
    nginx.org/backend-protocol: HTTP
    nginx.org/cors-allow-origin: '*'
    nginx.org/proxy-buffer-size: "128k"
    nginx.org/proxy-buffers-number: "4"
    nginx.org/proxy-buffering: "on"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: management-console
                port:
                  name: http
